# qadence-protocols

./: .gitignore  .gitlab-ci.yml  .no_tracebacks.sh  .pre-commit-config.yaml  README.md  mkdocs.yml  protocols.py  pyproject.toml  readthedocs.yml  renovate.json  types.py  versions.json
.github/workflows/: test_fast.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  getting_started.ipynb  index.md
docs/contents/: index.md
docs/error_mitigation/: incoherent_error_mitigation.md  index.md  readout_mitigation.md
docs/measurements/: index.md  shadow_tomography.md
qadence_protocols/: __init__.py  protocols.py  twirl_mitigation.py  types.py  utils_trace.py
qadence_protocols/measurements/: __init__.py  abstract.py  calibration.py  protocols.py  readout.py  robust_shadow.py  samples.py  shadow.py  tomography.py  utils.py  utils_shadow.py  utils_tomography.py  utils_trace.py
qadence_protocols/measurements/utils_shadow/: data_acquisition.py  post_processing.py  unitaries.py
qadence_protocols/mitigations/: analog_zne.py  protocols.py  readout.py  twirl.py  twirl_mitigation.py
template_python/: main.py
tests/: metrics.py  strategies.py  test_calibration.py  test_main.py  test_mitigations.py  test_readout.py  test_shadow.py  test_shadows.py  test_tomography.py  test_twirl.py  test_zne.py
v0.1.3/: index.html
v0.1.3/CODE_OF_CONDUCT/: index.html
v0.1.3/CONTRIBUTING/: index.html
v0.1.3/getting_started/: index.html
v0.1.3/search/: search_index.json
v0.1.4/: 404.html
v0.1.5/: 404.html  index.html
v0.1.5/CODE_OF_CONDUCT/: index.html
v0.1.5/CONTRIBUTING/: index.html
v0.1.5/getting_started/: index.html
v0.1.6/: 404.html  index.html
v0.1.6/CODE_OF_CONDUCT/: index.html
v0.1.6/CONTRIBUTING/: index.html
v0.1.6/error_mitigation/: index.html
v0.1.6/getting_started/: index.html
v0.1.6/search/: search_index.json
v0.1.7/: 404.html  index.html
v0.1.7/CODE_OF_CONDUCT/: index.html
v0.1.7/CONTRIBUTING/: index.html
v0.1.7/contents/: index.html
v0.1.7/error_mitigation/: index.html
v0.1.7/error_mitigation/incoherent_error_mitigation/: index.html
v0.1.7/error_mitigation/readout_mitigation/: index.html
v0.1.7/getting_started/: index.html
v0.1.7/measurements/: index.html
v0.1.7/search/: search_index.json
v0.2.0/: 404.html  index.html
v0.2.0/CODE_OF_CONDUCT/: index.html
v0.2.0/CONTRIBUTING/: index.html
v0.2.0/contents/: index.html
v0.2.0/error_mitigation/: index.html
v0.2.0/error_mitigation/incoherent_error_mitigation/: index.html
v0.2.0/error_mitigation/readout_mitigation/: index.html
v0.2.0/getting_started/: index.html
v0.2.0/measurements/: index.html
v0.2.0/search/: search_index.json
v0.2.1/: 404.html  index.html
v0.2.1/CODE_OF_CONDUCT/: index.html
v0.2.1/CONTRIBUTING/: index.html
v0.2.1/contents/: index.html
v0.2.1/error_mitigation/: index.html
v0.2.1/error_mitigation/incoherent_error_mitigation/: index.html
v0.2.1/error_mitigation/readout_mitigation/: index.html
v0.2.1/getting_started/: index.html
v0.2.1/measurements/: index.html
v0.2.1/measurements/shadow_tomography/: index.html
v0.2.1/search/: search_index.json
